--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.1",
     "prisma": "6.3.1",
