--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "yarn test",
     "db:migrate": "yarn prisma migrate dev",
+    "db:seed": "yarn prisma db seed",
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts"
@@ -31,6 +32,7 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.1",
