--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "http-status-codes": "^2.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
